<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/BrowsePlant_Adding_Img"
        android:layout_width="202dp"
        android:layout_height="166dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BrowsePlant_Adding_CommonName"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="207dp"
        android:layout_height="74dp"
        android:text="@string/distance_text"
        app:layout_constraintEnd_toEndOf="@+id/BrowsePlant_Adding_Radius"
        app:layout_constraintStart_toStartOf="@+id/BrowsePlant_Adding_Radius"
        app:layout_constraintTop_toBottomOf="@+id/BrowsePlant_Adding_Add" />

    <Button
        android:id="@+id/BrowsePlant_Adding_Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btn_back"
        app:layout_constraintStart_toStartOf="@+id/BrowsePlant_Adding_Radius"
        app:layout_constraintTop_toBottomOf="@+id/BrowsePlant_Adding_Radius" />

    <EditText
        android:id="@+id/BrowsePlant_Adding_Radius"
        android:layout_width="205dp"
        android:layout_height="49dp"
        android:layout_marginBottom="100dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/distance_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BrowsePlant_Adding_Img"
        app:layout_constraintVertical_bias="0.074" />

    <Button
        android:id="@+id/BrowsePlant_Adding_Add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btn_add"
        app:layout_constraintEnd_toEndOf="@+id/BrowsePlant_Adding_Radius"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintStart_toEndOf="@+id/BrowsePlant_Adding_Back"
        app:layout_constraintTop_toBottomOf="@+id/BrowsePlant_Adding_Radius" />

    <TextView
        android:id="@+id/BrowsePlant_Adding_CommonName"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginTop="60dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/BrowsePlant_Adding_Img"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/BrowsePlant_Adding_Img"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>