<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/Browse_Swaps_Details_Img"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/browseSwaps_I"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/ihave"
        app:layout_constraintEnd_toEndOf="@+id/Browse_Swaps_Details_Name"
        app:layout_constraintStart_toStartOf="@+id/Browse_Swaps_Details_Name"
        app:layout_constraintTop_toBottomOf="@+id/Browse_Swaps_Details_Img" />

    <TextView
        android:id="@+id/Browse_Swaps_Details_Name"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/Browse_Swaps_Details_Wishes"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/Browse_Swaps_Details_Wishes"
        app:layout_constraintTop_toBottomOf="@+id/browseSwaps_I" />

    <TextView
        android:id="@+id/BrowseSwaps_Have"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/iwant"
        app:layout_constraintEnd_toEndOf="@+id/Browse_Swaps_Details_Wishes"
        app:layout_constraintStart_toStartOf="@+id/Browse_Swaps_Details_Wishes"
        app:layout_constraintTop_toBottomOf="@+id/Browse_Swaps_Details_Name" />

    <TextView
        android:id="@+id/Browse_Swaps_Details_Wishes"
        android:layout_width="280dp"
        android:layout_height="242dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BrowseSwaps_Have" />

    <Button
        android:id="@+id/Browse_Swaps_Details_BackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/btn_back"
        app:backgroundTint="@color/plant_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Browse_Swaps_Details_MakeOffer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/btn_offer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>